k8s/payment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: cadsspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: payment-cont
        imagePullPolicy: Always
        image: sanguino/payment:1.0.0
