k8s/restaurant.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant
  namespace: cadsspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: restaurant-cont
        imagePullPolicy: Always
        image: sanguino/restaurant:1.0.0
