k8s/rider.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rider
  namespace: cadsspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rider
  template:
    metadata:
      labels:
        app: rider
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: rider-cont
        imagePullPolicy: Always
        image: sanguino/rider:1.0.0
