k8s/externals.yml
---
apiVersion: v1
kind: Service
metadata:
  name: externals-svc
  namespace: cadsspace
  labels:
    app: externals
spec:
  type: NodePort
  selector:
    app: externals
  ports:
  - port: 8080
    targetPort: 8080
    name: externals-port

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: externals
  namespace: cadsspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: externals
  template:
    metadata:
      labels:
        app: externals
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: externals-cont
        imagePullPolicy: Always
        image: sanguino/externals:1.0.0
        ports:
        - containerPort: 8080
          name: rest
