k8s/front.yml
---
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: cadsspace
  labels:
    app: front
spec:
  type: NodePort
  selector:
    app: front
  ports:
  - port: 8080
    targetPort: 8080
    name: front-port

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: cadsspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: front-cont
        imagePullPolicy: Always
        image: sanguino/front:1.0.0
        ports:
        - containerPort: 8080
          name: rest
