k8s/kafka-ui.yml
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-svc
  namespace: cadsspace
  labels:
    app: kafka-ui
spec:
  type: NodePort
  selector:
    app: kafka-ui
  ports:
  - port: 8080
    targetPort: 8080
    name: kafka-ui-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: cadsspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      - name: kafka-ui
        imagePullPolicy: Always
        image: provectuslabs/kafka-ui:master
        ports:
        - containerPort: 8080
          name: client
