k8s/kafka.yml
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: sanguino
spec:
  serviceName: kafka-svc
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      terminationGracePeriodSeconds: 30

      volumes:
      - name: kafka-pv-storage
        persistentVolumeClaim:
          claimName: kafka-pvc

      containers:
      - name: kafka-cont
        imagePullPolicy: Always
        image: confluentinc/cp-kafka:latest
        ports:
        - containerPort: 9092
          name: server
        command:
        - sh
        - -c
        - "KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka-${HOSTNAME##*-}.kafka-svc.sanguino.svc.cluster.local:9092 KAFKA_BROKER_ID=${HOSTNAME##*-} /etc/confluent/docker/run"
        volumeMounts:
        - name: kafka-pv-storage
          mountPath: /var/lib/kafka

---

apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: sanguino
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: server
  clusterIP: None
  selector:
    app: kafka
