k8s/kowl.yml
---

apiVersion: v1
kind: Service
metadata:
  name: kowl-svc
  namespace: cadsspace
  labels:
    app: kowl
spec:
  type: NodePort
  selector:
    app: kowl
  ports:
  - port: 8080
    targetPort: 8080
    name: kowl-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kowl
  namespace: cadsspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kowl
  template:
    metadata:
      labels:
        app: kowl
    spec:
      containers:
      - name: kowl
        imagePullPolicy: Always
        image: quay.io/cloudhut/kowl:master
        ports:
        - containerPort: 8080
          name: client
