k8s/notifications.yml
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-svc
  namespace: cadsspace
  labels:
    app: notifications
spec:
  type: NodePort
  selector:
    app: notifications
  ports:
  - port: 8080
    targetPort: 8080
    name: notify-port

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  namespace: cadsspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: notifications-cont
        imagePullPolicy: Always
        image: sanguino/notifications:1.0.0
        ports:
        - containerPort: 8080
          name: rest
