k8s/zookeeper.yml
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zoo
  namespace: cadsspace
spec:
  serviceName: zoo-svc
  replicas: 1
  selector:
    matchLabels:
      app: zoo
  template:
    metadata:
      labels:
        app: zoo
    spec:

      volumes:
      - name: zoo-pv-storage
        persistentVolumeClaim:
          claimName: zoo-pvc

      containers:
      - name: zoo-cont
        imagePullPolicy: Always
        image: confluentinc/cp-zookeeper:latest
        command:
        - "bash"
        - "-c"
        - "ZOOKEEPER_SERVER_ID=$((${HOSTNAME:3}+1)) && /etc/confluent/docker/run"
        ports:
        - containerPort: 2181
          name: client
        - containerPort: 2888
          name: server
        - containerPort: 3888
          name: leader-election
        volumeMounts:
        - name: zoo-pv-storage
          mountPath: /var/lib/zookeeper

---

apiVersion: v1
kind: Service
metadata:
  name: zoo-svc
  namespace: cadsspace
  labels:
    app: zoo
spec:
  ports:
  - port: 2181
    name: client
  - port: 2888
    name: server
  - port: 3888
    name: leader-election
  clusterIP: None
  selector:
    app: zoo
