k8s/ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kowl-ingress
  namespace: sanguino
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: kowl.sanguino.cloud.okteto.net
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kowl-svc
            port:
              name: kowl-port

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: sanguino
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: kafka-ui.sanguino.cloud.okteto.net
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kafka-ui-svc
            port:
              name: kafka-ui-port

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cads-ingress
  namespace: sanguino
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: cads.sanguino.cloud.okteto.net
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: front-svc
            port:
              name: front-port
      - path: /externals/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: externals-svc
            port:
              name: externals-port
      - path: /notifications/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notifications-svc
            port:
              name: notify-port
